# chessClock

./: .gitignore  .travis.yml  ChessClock.cabal  ChessClock.hs  Clock.hs  LICENSE  README.MD
app/: ChessClock.hs
src/: ChessClock.hs  Clock.hs  NeatNumbers.hs  UI.hs  Utils.hs
src/ui/: Digits.hs  NeatNumbers.hs  UI.hs
test/: ClockRandomSpec.hs  ClockSpec.hs  UtilsRandomSpec.hs  UtilsSpec.hs
