name: ChessClock
version: 0.0.1.3
synopsis: chesssClock [-t] [-i]

description: Use this little tool if you want to play chess with time control but have no chess clock handy. It's CLI software, no GUI.

license: MIT
license-file: LICENSE
author: Dmitry Lukashevich
maintainer: ludn2@mail.ru
category: Game tool
build-type: Simple
cabal-version: >=1.8
executable ChessClock
  main-is: ChessClock.hs
  other-modules: NeatNumbers, Clock, Utils, UI
  hs-source-dirs: src, src/ui
  build-depends: base ==4.9.*, split ==0.2.*, terminal-size ==0.3.*
test-suite hspec
  build-depends: base ==4.9.*, split ==0.2.*, hspec
  other-modules: Clock, Utils
  hs-source-dirs: test, src
  main-is: Spec.hs
  type: exitcode-stdio-1.0