name: ChessClock
version: 0.0.1.4
synopsis: chessClock [-t] [-i]

description: Use this little tool if you want to play chess with time control but have no chess clock handy. It's CLI software, no GUI.

license: MIT
license-file: LICENSE
author: Dmitry Lukashevich
maintainer: ludn2@mail.ru
category: Game tool
build-type: Simple
cabal-version: >=1.8

library
  hs-source-dirs: src
                , src/ui
  exposed-modules: Digits
                 , Clock
                 , Utils
                 , UI
  build-depends: base ==4.9.*
               , split ==0.2.*
               , terminal-size ==0.3.*

executable chessClock
  main-is: ChessClock.hs
  hs-source-dirs: app
  build-depends: base ==4.9.*
               , split ==0.2.*
               , terminal-size ==0.3.*
               , ChessClock
               
test-suite hspec
  main-is: Spec.hs
  build-depends: base ==4.9.*
               , split ==0.2.*
               , hspec
               , QuickCheck ==2.8.*
               , terminal-size ==0.3.*               
  other-modules: Clock
               , Utils
               , UtilsSpec
               , ClockSpec
               , ClockRandomSpec
               , UtilsRandomSpec
  hs-source-dirs: test, src
  type: exitcode-stdio-1.0